[tool.poetry]
name = "flipt"
version = "1.0.0-rc.1"
description = "Flipt Server SDK"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
httpx = "^0.26.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = 'scripts:test'
