[package]
name = "flipt"
description = "Flipt Server SDK"
version = "1.1.0"
edition = "2021"
authors = ["Flipt Devs <dev@flipt.io>"]
license = "MIT"
keywords = ["flipt"]

[features]
flipt_integration = []

[dependencies]
chrono = { version = "0.4.23", default-features = false, features = [
    "serde",
    "clock",
] }
reqwest = { version = "0.12.1", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
url = "2.5.0"

[dev-dependencies]
tokio = { version = "1.22.0", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "time",
] }
